# eklavya-2015

./: README.md  catkin.options  tmuxinator.md
Environment/: environment.cpp  environment.h  interpretation.cpp  interpretation.h
Environment/simulation/eklavya_description/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
Environment/simulation/eklavya_description/launch/: description.launch
Environment/simulation/eklavya_description/meshes/: tslot_100x20x20.stl  tslot_200x20x20.dae  tslot_300x20x20.dae  tslot_400x20x20.dae  tslot_500x20x20.stl
Environment/simulation/eklavya_description/meshes/sensors/: LMS100_support_holder.dae  PS3eye_stereo.dae  hokuyo_urg.dae  sick_lms100.dae
Environment/simulation/eklavya_description/rviz/: model.rviz
Environment/simulation/eklavya_description/urdf/: base.urdf.xacro
Environment/simulation/eklavya_description/urdf/parts/: parts.urdf.xacro
Environment/simulation/eklavya_description/urdf/sensors/: 3dsensor_gazebo.urdf.xacro  gps.urdf.xacro  hector_gps_gazebo.urdf.xacro  hokuyo_lx30_laser.gazebo.xacro  kinect.urdf.xacro  multicamera.urdf.xacro  sick_lms100_laser.gazebo.xacro
Environment/simulation/eklavya_gazebo/: CMakeLists.txt  CMakeLists.txt~
Environment/simulation/eklavya_gazebo/launch/: eklavya_igvc_final.launch  eklavya_igvc_final_height.launch  eklavya_playpen.launch
Environment/simulation/eklavya_gazebo/media/materials/scripts/: igvc.material
Environment/simulation/eklavya_gazebo/models/ladder__60deg__0rails/: model.rconfig.i
Environment/simulation/eklavya_gazebo/src/: encoder_publisher.cpp
Environment/simulation/eklavya_gazebo/worlds/: igvc_final_height_.world
Environment/simulation/eklavya_gazebo/worlds/vrc/: vrc_final_task10.world  vrc_final_task11.world  vrc_final_task12.world  vrc_final_task13.world  vrc_final_task14.world  vrc_final_task2.world  vrc_final_task3.world  vrc_final_task4.world  vrc_final_task6.world  vrc_final_task7.world  vrc_final_task8.world  vrc_final_task9.world
Planning/: README.md  Vectornav-Readme.txt
Robot/controls/controls/: CMakeLists.txt  package.xml  package.xml~
Robot/controls/controls/include/controls/: vx_pid.h
Robot/controls/controls/launch/: Daclaunch.launch~  Encoderslaunch.launch~  arduinolaunch2.launch~  fullcontrol.launch~  manualcontrol0.launch  manualcontrol1.launch
Robot/controls/controls/src/: c_pid.cpp  modeswitcher.cpp  modeswitcher.cpp.save  modeswitcherdue.cpp  vx_pid.cpp
SLAM/: .gitignore  CMakeLists.txt  CMakeLists.txt~  SLAM-Readme.txt
SLAM/src/: gps.cpp  (+4 more)
Utils/: README.md
Utils/launch_files/eklavya_launch/: CMakeLists.txt  package.xml
Utils/launch_files/eklavya_launch/launch/: eklavya_empty_world_key.launch  gmapping_demo.launch  run_system.launch  view_navigation.launch
Utils/launch_files/eklavya_launch/rviz/: navigation.rviz
controls/: README.md
controls/eklavya4_roboteq/: CMakeLists.txt  package.xml
controls/eklavya4_roboteq/launch/: roboteq_launch.launch~
controls/eklavya4_roboteq/src/: RoboteqDevice.cpp  roboteq_server.cpp
navigation/: README.md
navigation/eklavya_navigation/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
navigation/eklavya_navigation/config/: base_local_planner_params.yaml  base_local_planner_params.yaml~  costmap_common_params.yaml  costmap_common_params.yaml~  global_costmap_params.yaml  local_costmap_params.yaml  nomap_global_costmap_params.yaml
navigation/eklavya_navigation/config/odom_nav_params/: params_costmap2d.yaml
navigation/eklavya_navigation/launch/: amcl.launch  gmapping.launch  move_base.launch
navigation/eklavya_navigation/maps/: map.yaml
navigation/high_level_planner_igvc/: .gitignore  CMakeLists.txt  CMakeLists.txt~  package.xml
navigation/high_level_planner_igvc/cmake/: decision_making_parsing.cmake
navigation/high_level_planner_igvc/include/high_level_planner_igvc/: strategy_planner.hpp
navigation/high_level_planner_igvc/launch/: high_level_planner_igvc.launch
navigation/high_level_planner_igvc/src/: fsm_high_level_planner_igvc.cpp  is_test_mode.cpp  publish_confidence.cpp  publish_nml.cpp  strategy_planner.cpp
navigation/nose_navigator/: CMakeLists.txt
navigation/nose_navigator/src/: nose_navigator.cpp
navigation/utils/dummy_publisher/: CMakeLists.txt
sensors/vn_ins/: CMakeLists.txt  package.xml  package.xml~
sensors/vn_ins/include/: vn_ins.hpp
sensors/vn_ins/include/vn_ins/: vn200.h
sensors/vn_ins/launch/: module.launch
sensors/vn_ins/src/: Environment.cpp  vn_ins.cpp
sensors/vn_ins/src/vn_ins/: vn200.c
simulation/eklavya5_description/: package.xml
simulation/eklavya5_description/launch/: description.launch  gazebo.launch  view_model.launch
simulation/eklavya5_description/meshes/: Chassis.STL  Front Wheel.STL  GPSAntennaScaledDown.dae  Left Wheel.STL  Right Wheel.STL  Steering.STL
simulation/eklavya5_description/robots/: chasisss.urdf.xacro  chasisss.urdf.xacro~  chasisss_sample.urdf
simulation/eklavya5_description/sensors/: camera.urdf.xacro  gps.urdf.xacro  imu.urdf.xacro  imusensor_gazebo.urdf.xacro  lidar.urdf.xacro
simulation/eklavya_gazebo/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.sh
simulation/eklavya_gazebo/launch/: base.urdf.gazebo.launch  eklavya_empty_world.launch  eklavya_igvc_final_height.launch  eklavya_playpen.launch
simulation/eklavya_gazebo/models/grass_igvc_lines_height/: model.config  model.sdf
simulation/eklavya_gazebo/models/ladder__60deg__0rails/: model.config.i
simulation/eklavya_gazebo/src/: encoder_publisher.cpp
simulation/eklavya_gazebo/worlds/: clearpath_playpen  grass_and_lines.world  igvc_final_height_.world
simulation/eklavya_gazebo/worlds/vrc/: vrc_final_task1.world  vrc_final_task15.world  vrc_final_task5.world
simulation/eklavya_interactive_markers/: CHANGELOG.rst  CMakeLists.txt  package.xml
simulation/eklavya_interactive_markers/launch/: interactive_markers.launch~
simulation/eklavya_interactive_markers/src/: marker_server.cpp
teleop/eklavya_teleop/: CMakeLists.txt  CMakeLists.txt~  package.xml
teleop/eklavya_teleop/launch/: teleop_keyboard.launch
(+350 files in other folders)
