<?xml version="1.0"?>
<package>
  <name>eklavya_navigation</name>
  <version>0.0.1</version>
  <description>Launch files and code for autonomous navigation of Eklavya 2015</description>

  <maintainer email="jit.ray.c@gmail.com">Jit Ray Chowdhury</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>amcl</run_depend>
  <run_depend>gmapping</run_depend>
  <run_depend>map_server</run_depend>

  <export>
  </export>
</package>
