<package>
  <name>vn_ins</name>
  <version>2.1.7</version>
  <description>

     vn_ins

  </description>
  <maintainer email="todivasudha@gmail.com">vasudha</maintainer>
  <author>jashan</author>
  <license>BSD</license>
  <url>http://ros.org/wiki/vectorNav</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  
  <build_depend>tf</build_depend>
  <build_depend>agv_framework"</build_depend>

  <run_depend>roscpp</run_depend>
  
  <run_depend>std_msg</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  
  <run_depend>tf</run_depend>
  
  <run_depend>agv_framework</run_depend>
</package>


