<?xml version="1.0"?>
<package>
  <name>eklavya5_description</name>
  <version>0.0.1</version>
  <description>chasissssss welded.SLDASM</description>
  <maintainer email="ma.ag37@gmail.com">Manuj Agrawal</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>gazebo</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <author>me</author>
  <license>BSD</license>
</package>
