<?xml version="1.0"?>
<package>
  <name>eklavya_interactive_markers</name>
  <version>0.0.1</version>
  <description>Interactive markers for controlling Eklavya from inside rviz.</description>

  <maintainer email="jit.ray.c@gmail.com">Jit Ray Chowdhury</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <run_depend>interactive_markers</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>visualization_msgs</run_depend>
  
  <export>
  </export>
</package>
