<?xml version="1.0"?>
<package>
  <name>eklavya_teleop</name>
  <version>0.0.1</version>
  <description>
    Basic node for transforming joystick messages to cmd_vel for Eklavya.
  </description>

  <maintainer email="jit.ray.c@gmail.com">Jit Ray Chowdhury</maintainer>
  <license>BSD</license>

  <!-- <url type="website">http://ros.org/wiki/eklavya_teleop</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>joy</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>joy</run_depend>

  <export>
  </export>
</package>
