<?xml version="1.0"?>
<package>
  <name>eklavya_description</name>
  <version>0.0.1</version>
  <description>URDF description for Eklavya 2015</description>

  <maintainer email="jit.ray.c@gmail.com">Jit Ray Chowdhury</maintainer>


  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>rviz</run_depend>

  <export>
  </export>
</package>
